--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -140,87 +140,22 @@ jobs:
             --log-group-name "/aws/lambda/child-allowance-tracker" \
             --retention-in-days 14 || echo "Failed to set retention policy"
 
-      - name: Ensure Lambda execution role exists
+      - name: Check existing Lambda execution role
         run: |
-          echo "Creating/updating Lambda execution role..."
+          echo "Checking existing Lambda execution role..."
+          aws iam get-role --role-name lambda-execution-role --query 'Role.[RoleName,CreateDate]' --output table || echo "Role not found"
 
-          # Create trust policy
-          cat > trust-policy.json << 'EOF'
-          {
-            "Version": "2012-10-17",
-            "Statement": [
-              {
-                "Effect": "Allow",
-                "Principal": {
-                  "Service": "lambda.amazonaws.com"
-                },
-                "Action": "sts:AssumeRole"
-              }
-            ]
-          }
-          EOF
+          echo "Checking attached policies..."
+          aws iam list-attached-role-policies --role-name lambda-execution-role --output table || echo "Failed to list policies"
 
-          # Create or update the role
-          aws iam create-role \
-            --role-name lambda-execution-role \
-            --assume-role-policy-document file://trust-policy.json \
-            --description "Lambda execution role for child-allowance-tracker" || \
-          aws iam update-assume-role-policy \
-            --role-name lambda-execution-role \
-            --policy-document file://trust-policy.json
-
-          # Attach basic Lambda execution policy
-          aws iam attach-role-policy \
-            --role-name lambda-execution-role \
-            --policy-arn arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole || \
-            echo "Policy already attached"
-
-          # Create custom policy for DynamoDB and other services
-          cat > lambda-policy.json << 'EOF'
-          {
-            "Version": "2012-10-17",
-            "Statement": [
-              {
-                "Effect": "Allow",
-                "Action": [
-                  "logs:CreateLogGroup",
-                  "logs:CreateLogStream",
-                  "logs:PutLogEvents",
-                  "logs:DescribeLogGroups",
-                  "logs:DescribeLogStreams"
-                ],
-                "Resource": "arn:aws:logs:us-east-1:960311492155:*"
-              },
-              {
-                "Effect": "Allow",
-                "Action": [
-                  "dynamodb:GetItem",
-                  "dynamodb:PutItem",
-                  "dynamodb:UpdateItem",
-                  "dynamodb:DeleteItem",
-                  "dynamodb:Query",
-                  "dynamodb:Scan"
-                ],
-                "Resource": "arn:aws:dynamodb:us-east-1:960311492155:table/allowance-data-production"
-              }
-            ]
-          }
-          EOF
-
-          # Put the inline policy
-          aws iam put-role-policy \
-            --role-name lambda-execution-role \
-            --policy-name LambdaCustomPolicy \
-            --policy-document file://lambda-policy.json
-
-          echo "Waiting for role to propagate..."
-          sleep 10
+          echo "Checking inline policies..."
+          aws iam list-role-policies --role-name lambda-execution-role --output table || echo "Failed to list inline policies"
 
       - name: Debug deployment package structure
         run: |
           echo "=== DEPLOYMENT PACKAGE ANALYSIS ==="
           echo "Full deployment package contents:"
-          unzip -l deployment.zip
+          unzip -l deployment.zip | head -30
 
           echo ""
           echo "=== CHECKING CRITICAL FILES ==="
@@ -234,42 +169,51 @@ jobs:
           unzip -l deployment.zip | grep "awsgi" || echo "❌ MISSING"
 
           echo "flask module:"
-          unzip -l deployment.zip | grep "flask" || echo "❌ MISSING"
+          unzip -l deployment.zip | grep -i "flask" || echo "❌ MISSING"
 
           echo ""
-          echo "=== TESTING PACKAGE EXTRACTION ==="
-          # Extract and test imports
-          mkdir test_extract
+          echo "=== CHECKING PACKAGE STRUCTURE ==="
+          # Extract and examine structure
+          mkdir -p test_extract
           cd test_extract
           unzip -q ../deployment.zip
 
-          echo "Testing Python imports..."
-          python3 -c "
-          import sys
-          print('Python version:', sys.version)
-          print('Current directory contents:', $(ls -la | head -10))
+          echo "Root directory contents:"
+          ls -la | head -20
 
+          echo ""
+          echo "Looking for Python files:"
+          find . -name "*.py" | head -20
+
+          echo ""
+          echo "Testing basic imports:"
+          python3 -c "
+          import sys, os
+          print(f'Working directory: {os.getcwd()}')
+          print(f'Python path: {sys.path[:3]}')
+
+          # Test basic Python functionality
+          try:
+              import json
+              print('✅ json module works')
+          except Exception as e:
+              print(f'❌ json module failed: {e}')
+
+          # Test if lambda_function exists and can be imported
           try:
               import lambda_function
               print('✅ lambda_function imported successfully')
+              print(f'Handler function exists: {hasattr(lambda_function, \"lambda_handler\")}')
           except Exception as e:
-              print('❌ lambda_function import failed:', e)
-
-          try:
-              import awsgi
-              print('✅ awsgi imported successfully')
-          except Exception as e:
-              print('❌ awsgi import failed:', e)
-
-          try:
-              from app import app
-              print('✅ Flask app imported successfully')
-          except Exception as e:
-              print('❌ Flask app import failed:', e)
+              print(f'❌ lambda_function import failed: {e}')
+              import traceback
+              traceback.print_exc()
           " || echo "Python test failed"
 
       - name: Deploy to Lambda
         run: |
+          echo "Using existing Lambda execution role: arn:aws:iam::960311492155:role/lambda-execution-role"
+
           # Check if function exists
           if ! aws lambda get-function --function-name child-allowance-tracker 2>/dev/null; then
             echo "Creating Lambda function..."
@@ -290,7 +234,7 @@ jobs:
               --auth-type NONE || true
 
           else
-            echo "Checking if function needs updating..."
+            echo "Function exists. Updating..."
 
             # Get current function's CodeSha256
             CURRENT_SHA=$(aws lambda get-function --function-name child-allowance-tracker --query 'Configuration.CodeSha256' --output text)
@@ -308,61 +252,21 @@ jobs:
                 --zip-file fileb://deployment.zip
 
               echo "Waiting for function update to complete..."
-              for i in {1..30}; do
-                STATUS=$(aws lambda get-function --function-name child-allowance-tracker --query 'Configuration.LastUpdateStatus' --output text)
-                echo "Update status: $STATUS (attempt $i/30)"
-
-                if [ "$STATUS" = "Successful" ]; then
-                  echo "Function update completed successfully"
-                  break
-                elif [ "$STATUS" = "Failed" ]; then
-                  echo "Function update failed"
-                  exit 1
-                fi
-
-                sleep 10
-              done
-
-              if [ "$STATUS" != "Successful" ]; then
-                echo "Function update timed out"
-                exit 1
-              fi
+              aws lambda wait function-updated --function-name child-allowance-tracker
+              echo "Function code update completed"
             else
               echo "✅ Code unchanged. Skipping function code update."
             fi
 
-            # Always check and update environment variables if needed
-            echo "Checking environment variables..."
+            # Update environment variables (always do this in case secrets changed)
+            echo "Updating environment variables..."
+            aws lambda update-function-configuration \
+              --function-name child-allowance-tracker \
+              --environment file://env-vars.json
 
-            # Get current environment variables
-            CURRENT_ENV=$(aws lambda get-function-configuration --function-name child-allowance-tracker --query 'Environment.Variables' --output json)
-            NEW_ENV=$(cat env-vars.json | jq '.Variables')
-
-            if [ "$CURRENT_ENV" != "$NEW_ENV" ]; then
-              echo "Environment variables have changed. Updating configuration..."
-
-              aws lambda update-function-configuration \
-                --function-name child-allowance-tracker \
-                --environment file://env-vars.json
-
-              echo "Waiting for configuration update to complete..."
-              for i in {1..30}; do
-                STATUS=$(aws lambda get-function --function-name child-allowance-tracker --query 'Configuration.LastUpdateStatus' --output text)
-                echo "Configuration update status: $STATUS (attempt $i/30)"
-
-                if [ "$STATUS" = "Successful" ]; then
-                  echo "Configuration update completed successfully"
-                  break
-                elif [ "$STATUS" = "Failed" ]; then
-                  echo "Configuration update failed"
-                  exit 1
-                fi
-
-                sleep 5
-              done
-            else
-              echo "✅ Environment variables unchanged. Skipping configuration update."
-            fi
+            echo "Waiting for configuration update to complete..."
+            aws lambda wait function-updated --function-name child-allowance-tracker
+            echo "Configuration update completed"
           fi
 
       - name: Wait for function to be truly ready
