--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,29 @@
 [project]
 name = "child-allowance-tracker"
 version = "0.1.0"
-description = "Child allowance tracking app"
-readme = "README.md"
-requires-python = ">=3.12"
+description = "A FastAPI web application to track children's allowances"
+requires-python = ">=3.13"
 dependencies = [
-    "flask>=2.3.0",
-    "google-auth>=2.22.0",
+    "fastapi>=0.104.0",
+    "mangum>=0.17.0",
+    "aws-lambda-powertools>=2.25.0",
+    "boto3>=1.26.0",
+    "pydantic>=2.5.0",
+    "google-auth>=2.17.0",
     "google-auth-oauthlib>=1.0.0",
-    "google-auth-httplib2>=0.1.0",
-    "google-api-python-client>=2.95.0",
-    "gspread>=5.10.0",
+    "google-auth-httplib2>=0.2.0",
+    "google-api-python-client>=2.88.0",
     "python-dotenv>=1.0.0",
-    "awsgi",
-    "boto3>=1.28.0",
-    "pydantic>=2.0.0",
+    "uvicorn[standard]>=0.24.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-asyncio>=0.21.0",
+    "httpx>=0.24.0",  # For testing FastAPI
+    "ruff>=0.1.0",    # Replaces black, isort, flake8
+    "pre-commit>=3.0.0",  # Add pre-commit
 ]
 
 [build-system]
@@ -24,51 +33,33 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
 
-[tool.uv]
-dev-dependencies = [
-    "pytest>=7.0.0",
-    "ruff>=0.1.0",
-    "pre-commit>=3.5.0",
-    "cfn-lint>=1.36.0",
-]
+[tool.pytest.ini_options]
+testpaths = ["tests"]
 
+# Ruff configuration - Fixed Python version
 [tool.ruff]
-target-version = "py312"
+target-version = "py312"  # Changed from py313 to py312 (latest supported)
 line-length = 88
-fix = true
-
-lint.select = [
-    "E", "W", "F", "I",    # basics
-    "B", "C4", "UP",       # code quality
-    "S",                   # security (important for web apps)
-    "RUF",                 # ruff rules
+select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "I",   # isort
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "UP",  # pyupgrade
 ]
-
-lint.ignore = [
-    "E501",   # line too long
-    "S104",   # hardcoded bind all interfaces (0.0.0.0)
-    "S105",   # hardcoded password (for dev configs)
-    "S106",   # hardcoded password in function argument
-    "S108",   # hardcoded temp file/directory
-    "S311",   # random for cryptographic purposes
-    "B008",   # function calls in argument defaults
+ignore = [
+    "E501",  # line too long, handled by formatter
+    "B008",  # do not perform function calls in argument defaults
+    "C901",  # too complex
 ]
-
-# Per-file ignores
-[tool.ruff.per-file-ignores]
-"tests/*" = ["S101", "PLR2004"]  # allow assert and magic values in tests
-"lambda_function.py" = ["E402"]  # allow sys.path modification
-"tests/*.py" = ["E402"]  # allow sys.path modification in tests
 
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
+skip-magic-trailing-comma = false
 line-ending = "auto"
 
-[tool.pytest.ini_options]
-testpaths = ["tests"]
-python_files = ["test_*.py", "*_test.py"]
-python_classes = ["Test*"]
-python_functions = ["test_*"]
-addopts = "-v --tb=short"
-pythonpath = ["src"]
+[tool.ruff.isort]
+known-first-party = ["src"]
