--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,11 @@ jobs:
       - name: Install dependencies
         run: uv sync
 
-      - name: Run Ruff linter
-        run: uv run ruff check .
-
-      - name: Run Ruff formatter
-        run: uv run ruff format --check .
+      # Removed Ruff steps from deployment - keep them only for local development
+      # - name: Run Ruff linter
+      #   run: uv run ruff check .
+      # - name: Run Ruff formatter
+      #   run: uv run ruff format --check .
 
       - name: Run tests
         run: uv run pytest
