--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,10 +36,12 @@ packages = ["src"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 
-# Ruff configuration - Fixed Python version
+# Ruff configuration - Fixed syntax
 [tool.ruff]
-target-version = "py312"  # Changed from py313 to py312 (latest supported)
+target-version = "py312"
 line-length = 88
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -61,5 +63,5 @@ indent-style = "space"
 skip-magic-trailing-comma = false
 line-ending = "auto"
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["src"]
