--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Set up Python
         run: uv python install 3.13
 
-      - name: Install dependencies
-        run: uv sync
+      - name: Install dependencies (including dev)
+        run: uv sync --dev
 
       - name: Run tests
         run: uv run pytest -v
@@ -41,6 +41,9 @@ jobs:
 
       - name: Set up Python
         run: uv python install 3.13
+
+      - name: Install production dependencies only
+        run: uv sync --no-dev
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
