--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,10 @@ jobs:
         run: uv python install 3.13
 
       - name: Install production dependencies only
-        run: uv sync --no-dev
+        run: |
+          uv sync --no-dev
+          uv run python -m pip install pytest
+
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
